doc/routing-to-sys-components/examples/nginx-tls/istio-conf.yaml
#@ load("@ytt:data", "data")

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wildcard-sys-gateway
  namespace: cf-system
spec:
  selector:
    istio: ingressgateway #! use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - #@ data.values.systemWildcardDomain
